Fix a bug that allowed the header to scroll when a chess block overflowed horizontally.

--- a/chess-client/components/ChessContainer/ChessContainer.module.scss
+++ b/chess-client/components/ChessContainer/ChessContainer.module.scss
@@ -1,3 +1,7 @@
+.wrapper {
+    overflow-x: auto;
+}
+
 .container {
     --cellSize: calc(min(100cqw, 100vh) * var(--zoom) / 9.2);
 }
